@@ -2,10 +2,12 @@ package server.controller;
 
 import server.persistence.dao.*;
 import server.persistence.dto.*;
+import server.util.ProtocolValidator;
 import shared.protocol.persistence.*;
 
 import java.sql.SQLException;
 import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.Objects;
 
 import static server.util.ProtocolValidator.getIdBySessionId;
@@ -25,11 +27,11 @@ public class PaymentController {
     public static Protocol<?> getPaymentAmount(Protocol<?> protocol) throws SQLException {
         Protocol<?> resProtocol = new Protocol<>();
         Header header = new Header(Type.RESPONSE, DataType.TLV, Code.ResponseCode.OK, 0);
-
         String sessionId = (String) protocol.getChildren().getFirst().getData();
         String id = getIdBySessionId(sessionId);
 
-        if (id != null) {
+        if (id != null && ProtocolValidator.isStudent(sessionId)) {
+
             PaymentDAO paymentDAO = new PaymentDAO();
             PaymentDTO paymentDTO = paymentDAO.findByUid(id);
 
@@ -44,8 +46,9 @@ public class PaymentController {
                 resProtocol.addChild(childProtocol);
             } else {
                 // 결제 정보가 없는 경우 처리
-                header.setCode(Code.ResponseCode.ErrorCode.INVALID_REQUEST);
+                header.setCode(Code.ResponseCode.ErrorCode.INVALID_VALUE);
             }
+
         } else {
             // 세션 ID가 유효하지 않은 경우
             header.setCode(Code.ResponseCode.ErrorCode.UNAUTHORIZED);
@@ -73,7 +76,7 @@ public class PaymentController {
         String sessionId = (String) protocol.getChildren().getFirst().getData();
         String id = getIdBySessionId(sessionId);
 
-        if (id != null) {
+        if (id != null&&ProtocolValidator.isStudent(sessionId)) {
             PaymentDAO paymentDAO = new PaymentDAO();
             PaymentDTO paymentDTO = paymentDAO.findByUid(id);
 
@@ -104,16 +107,16 @@ public class PaymentController {
      * @param protocol header(type:request, dataType: TLV, code: BANK_TRANSFER, dataLength:)
      *                 data:
      *                 children <
-     *                 1 ( header(type: value, dataType: string, code: sessionId, dataLength:,)
-     *                 data: 세션아이디 ),
-     *                 2 ( header(type: value, dataType: string, code: accountNumber, dataLength:,)
+     *                 1 ( header(type: value, dataType: string, code: accountNumber, dataLength:,)
      *                 data: 계좌번호),
-     *                 3 ( header(type: value, dataType: string, code: accountHolderName, dataLength:,)
+     *                 2 ( header(type: value, dataType: string, code: accountHolderName, dataLength:,)
      *                 data: 계좌주이름 ),
-     *                 4 ( header(type: value, dataType: string, code: bankName, dataLength:,)
+     *                 3 ( header(type: value, dataType: string, code: bankName, dataLength:,)
      *                 data: 은행명)
-     *                 5 ( header(type: value, dataType: string, code: PAYMENT_STATUS_NAME, dataLength:,)
+     *                 4 ( header(type: value, dataType: string, code: PAYMENT_STATUS_NAME, dataLength:,)
      *                 data: "납부")
+     *                 5 ( header(type: value, dataType: string, code: sessionId, dataLength:,)
+     *                 data: 세션아이디 ),
      *                 >
      * @return header(type : Response, dataType : TLV, code : OK ( 틀리면 에러) dataLength: 0)
      * data: null
@@ -121,14 +124,16 @@ public class PaymentController {
     public static Protocol<?> payByBankTransfer(Protocol<?> protocol) throws SQLException {
         Header header = new Header(Type.RESPONSE, DataType.TLV, Code.ResponseCode.OK, 0);
         Protocol<?> resProtocol = new Protocol<>();
-        BankTransferPaymentDAO BTpaymentDAO = new BankTransferPaymentDAO();
+        BankTransferPaymentDAO BTPaymentDAO = new BankTransferPaymentDAO();
         PaymentDAO paymentDAO = new PaymentDAO();
         String id;
-        id = getIdBySessionId((String) protocol.getChildren().getFirst().getData());
-        if (id != null) {
-            BTpaymentDAO.update(id, (String) protocol.getChildren().get(1).getData(),
-                    (String) protocol.getChildren().get(2).getData(), (String) protocol.getChildren().get(3).getData());
-            paymentDAO.statusUpdate(id, (String) protocol.getChildren().get(4).getData());
+        String sessionId = (String) protocol.getChildren().getLast().getData();
+        id = getIdBySessionId(sessionId);
+        if (id != null&&ProtocolValidator.isStudent(sessionId)) {
+            BTPaymentDAO.save(new BankTransferPaymentDTO(0, (String) protocol.getChildren().get(0).getData(),
+                    (String) protocol.getChildren().get(1).getData(), LocalDateTime.now(), paymentDAO.findByUid(id),
+                    new BankDTO(0, (String) protocol.getChildren().get(2).getData())));
+            paymentDAO.statusUpdate(id, (String) protocol.getChildren().get(3).getData());
         } else header.setCode(Code.ResponseCode.ErrorCode.UNAUTHORIZED);
         resProtocol.setHeader(header);
         return resProtocol;
@@ -138,14 +143,14 @@ public class PaymentController {
      * @param protocol header(type:request, dataType: TLV, code: CARD_MOVEMENT, dataLength:)
      *                 data:
      *                 children <
-     *                 1 ( header(type: value, dataType: string, code: sessionId, dataLength:,)
-     *                 data: 세션아이디 ),
-     *                 2 ( header(type: value, dataType: string, code: cardNumber, dataLength:,)
+     *                 1 ( header(type: value, dataType: string, code: cardNumber, dataLength:,)
      *                 data: 카드번호),
-     *                 3 ( header(type: value, dataType: string, code: card_issuer, dataLength:,)
-     *                 data: 계좌주이름 ),
-     *                 4 ( header(type: value, dataType: string, code: PAYMENT_STATUS_NAME, dataLength:,)
-     *                 data: "납부")
+     *                 2 ( header(type: value, dataType: string, code: card_issuer, dataLength:,)
+     *                 data: 카드사 이름),
+     *                 3 ( header(type: value, dataType: string, code: PAYMENT_STATUS_NAME, dataLength:,)
+     *                 data: "납부"),
+     *                 4 ( header(type: value, dataType: string, code: sessionId, dataLength:,)
+     *                 data: 세션아이디 )
      *                 >
      * @return header(type : Response, dataType : TLV, code : OK ( 틀리면 에러) dataLength: 0)
      * data: null
@@ -153,25 +158,27 @@ public class PaymentController {
     public static Protocol<?> payByCard(Protocol<?> protocol) {
         Protocol<?> resProtocol = new Protocol<>();
         Header header = new Header(Type.RESPONSE, DataType.TLV, Code.ResponseCode.OK, 0);
-
+//todo cardIssuer 테이블에서 code 지워주세요
         try {
-            String sessionId = (String) protocol.getChildren().getFirst().getData();
+            String sessionId = (String) protocol.getChildren().getLast().getData();
             String id = getIdBySessionId(sessionId);
 
-            if (id == null) {
+            if (id == null && !ProtocolValidator.isStudent(sessionId)) {
                 header.setCode(Code.ResponseCode.ErrorCode.UNAUTHORIZED);
                 resProtocol.setHeader(header);
-                return resProtocol; // 즉시 반환
+                return resProtocol;
             }
-            CardPaymentDAO cardPaymentDAO = new CardPaymentDAO();
-            cardPaymentDAO.update(
-                    id,
-                    (String) protocol.getChildren().get(1).getData(),
-                    (String) protocol.getChildren().get(2).getData(),
-                    (String) protocol.getChildren().get(3).getData()
-            );
+                PaymentDAO paymentDAO = new PaymentDAO();
+                CardPaymentDAO cardPaymentDAO = new CardPaymentDAO();
+                cardPaymentDAO.save(new CardPaymentDTO(0, (String) protocol.getChildren().get(0).getData(),
+                        LocalDateTime.now(),
+                        new CardIssuerDTO(0, protocol.getChildren().get(1).getData()),
+                        paymentDAO.findByUid(id)
+                ));
+                paymentDAO.statusUpdate(id, (String) protocol.getChildren().get(2).getData());
 
-        } catch (SQLException e) {
+
+        }catch (SQLException e) {
             // 데이터베이스 예외 처리
             header.setCode(Code.ResponseCode.ErrorCode.INTERNAL_SERVER_ERROR);
         }
@@ -185,29 +192,58 @@ public class PaymentController {
      * @param protocol header(type:request, dataType: TLV, code: REFUND_REQUEST, dataLength:)
      *                 data:
      *                 children <
-     *                 1 ( header(type: value, dataType: string, code: sessionId, dataLength:,)
+     *                 1 ( header(type: value, dataType: string, code:PAYMENT_STATUS, dataLength:,)
+     *                 data: "환불" ),
+     *                 2 ( header(type: value, dataType: string, code:ACCOUNT_NUMBER, dataLength:,)
+     *                 data: "계좌번호" ),
+     *                 3 ( header(type: value, dataType: string, code:ACCOUNT_HOLDER_NAME, dataLength:,)
+     *                 data: "계좌주 이름" ),
+     *                 4 ( header(type: value, dataType: string, code:BANK_NAME, dataLength:,)
+     *                 data: "은행명" ),
+     *                 5 ( header(type: value, dataType: string, code: sessionId, dataLength:,)
      *                 data: 세션아이디 )
      *                 >
-     * @return
+     * @return protocol header(type:request, dataType: TLV, code: REFUND_REQUEST, dataLength:)
+     * data:
+     * children <
+     * 1 ( header(type: value, dataType: string, code:REFUND_AMOUNT, dataLength:,)
+     * data: "환불금액" ),
      */
     public static Protocol<?> requestRefund(Protocol<?> protocol) throws SQLException {
-        String id = getIdBySessionId((String) protocol.getChildren().getFirst().getData());
+        String sessionId = (String) protocol.getChildren().getLast().getData();
+        String id = getIdBySessionId(sessionId);
         PaymentDAO paymentDAO = new PaymentDAO();
-        if (id != null) {
+        Protocol<?> respProtocol = new Protocol<>(new Header(Type.VALUE, DataType.TLV, Code.ResponseCode.OK, 0), "");
+        //todo payment_refunds 테이블에서 환불 사유 지워주세요 & Banks 테이블에서 BankCode 지워주세요
+        if (id != null&&ProtocolValidator.isStudent(sessionId)) {
             PaymentDTO paymentDTO = paymentDAO.findByUid(id);
             if (paymentDTO != null && Objects.equals(paymentDTO.getPaymentStatusDTO().getStatusName(), "납부")) {
                 RoomAssignmentDAO roomAssignmentDAO = new RoomAssignmentDAO();
                 MoveOutRequestDAO moveOutRequestDAO = new MoveOutRequestDAO();
-                // room_assignments 테이블에 퇴사예정일 추가 : expect_checkout_at
                 RoomAssignmentDTO roomAssignmentDTO = roomAssignmentDAO.findByUid(id);
                 MoveOutRequestDTO moveOutRequestDTO = moveOutRequestDAO.findByUid(id);
+                PaymentRefundDAO paymentRefundDAO = new PaymentRefundDAO();
+                PaymentRefundDTO paymentRefundDTO = new PaymentRefundDTO(0, protocol.getChildren().get(1).getData(), protocol.getChildren().get(2).getData(), LocalDateTime.now(),
+                        new BankDTO(0, (String) protocol.getChildren().get(3).getData()), paymentDTO);
+                paymentRefundDAO.save(paymentRefundDTO);
                 LocalDateTime start = roomAssignmentDTO.getMoveInAt();
                 LocalDateTime moveOut = moveOutRequestDTO.getCheckoutAt();
+                LocalDateTime end = moveOutRequestDTO.getCheckoutAt();
+                long totalDays = ChronoUnit.DAYS.between(start, end);
+                long remainingDays = ChronoUnit.DAYS.between(moveOut, end);
+
+                int totalAmount = paymentDTO.getPaymentAmount();
+                int refundAmount = (int) ((remainingDays / (double) totalDays) * totalAmount);
+                paymentDTO.getPaymentStatusDTO().setStatusName("환불");
+                paymentDAO.update(paymentDTO);
+                respProtocol.addChild(new Protocol<>(new Header(Type.VALUE, DataType.INTEGER, Code.ValueCode.REFUND_AMOUNT, 0), refundAmount));
 
             }
-        }
-        return null;
+            respProtocol.getHeader().setCode(Code.ErrorCode.INVALID_REQUEST);
+        } else respProtocol.getHeader().setCode(Code.ResponseCode.ErrorCode.UNAUTHORIZED);
+        return respProtocol;
     }
+
 
     /**
      * @param protocol header(type:request, dataType: TLV, code: REFUND_REQUEST, dataLength:)
@@ -227,9 +263,9 @@ public class PaymentController {
         String id = getIdBySessionId(sessionId);
 
         Header header = new Header(Type.RESPONSE, DataType.TLV, Code.ResponseCode.OK, 0);
-        Protocol<?> resProtocol = new Protocol<>();
+        Protocol<String> resProtocol = new Protocol<>();
 
-        if (id != null) {
+        if (id != null&&ProtocolValidator.isStudent(sessionId)) {
             PaymentDAO paymentDAO = new PaymentDAO();
             PaymentDTO paymentDTO = paymentDAO.findByUid(id);
 
@@ -262,11 +298,15 @@ public class PaymentController {
      * data:
      * >
      */
-    public static Protocol<?> confirmRefund(Protocol<?> protocol) throws SQLException {
-        String id = getIdBySessionId((String) protocol.getChildren().getFirst().getData());
-        if (id != null) {
-//todo 저는 여기서 찾을거긴 해요 퇴사 신청자 리스트 깁미
-        }
-    }
+//    public static Protocol<?> confirmRefund(Protocol<?> protocol) throws SQLException {
+//        String sessionId = (String) protocol.getChildren().getFirst().getData();
+//        String id = getIdBySessionId(sessionId);
+//        if (id != null&&ProtocolValidator.isAdmin(sessionId)) {
+//
+//        }
+//    }
+
+
+
 
 }
